--- a/.github/workflows/sure_deployment.yml
+++ b/.github/workflows/sure_deployment.yml
@@ -19,28 +19,18 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Install NodeJS
-        uses: action/setup-node@v2-beta
+      - name: Install Node.js
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-
-      - name: Prepare for yarn Installation
-  #       run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  #     - name: Install Yarn
-  #       run: sudo apt update && sudo apt install yarn
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
-
-
-
+      - name: Prepare for Yarn Installation
+        run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+      - name: install yarn
+        run: sudo apt update && sudo apt install yarn
       - name: Build React App
         run: yarn build
-
       - name: Install Surge
         run: npm install -g surge
-
-      - name: Run Surge
-        run: surge ./build first_react_app.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      - name: Run surge
+        run: surge ./build bootcamp_react_ziakhan.surge.sh --token ${{ secrets.SURGE_TOKEN }}
