--- a/.github/workflows/sure_deployment.yml
+++ b/.github/workflows/sure_deployment.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: React App DEploy to Surge
+name: React App Deploy to Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -19,18 +19,23 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2-beta
-        with:
-          node-version: 12
-      - name: Prepare for Yarn Installation
-        run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-      - name: install yarn
-        run: sudo apt update && sudo apt install yarn
-      - name: Build React App
-        run: yarn build
-      - name: Install Surge
-        run: npm install -g surge
-      - name: Run surge
-        run: surge ./build first-react-app.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    
+    - name: Install NodeJS
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: 12
+    
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: install # will run `yarn install` command
+        
+    - name: Build React App
+      run: yarn build
+      
+    - name: Install Surge
+      run: npm install --global surge
+
+    - name: Deploy to Surge
+      run: surge ./build project003-adil.surge.sh --token ${{ secrets.SURGE_TOKEN }}
